# fractals

./: .gitignore  CMakeLists.txt  README.md
shaders/: julia.comp  mandelbrot.comp  newton.comp  quad.frag  quad.vert
src/: main.cpp
